el important sirve una banda :)

--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,7 @@ hr {
 
     .nav_hamburguesa,
     .nav_cerrar {
-        display: none;
+        display: none !important;
     }
 
     .nav_logo {
